--- a/cli/package.json
+++ b/cli/package.json
@@ -27,6 +27,7 @@
   "author": "MEW Protocol Working Group",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "express": "^4.18.2",
