Fixes and cleanup

--- a/tests/scenario-8-typescript-agent/space.yaml
+++ b/tests/scenario-8-typescript-agent/space.yaml
@@ -21,6 +21,6 @@ participants:
       - kind: mcp/request
       - kind: mcp/response
       - kind: chat
-    fifo: true
+      - kind: system/*
     output_log: "./logs/test-client-output.log"
     auto_connect: true
