--- a/sdk/typescript-sdk/gateway/package.json
+++ b/sdk/typescript-sdk/gateway/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "@mew-protocol/types": "file:../types",
+    "@mew-protocol/capability-matcher": "file:../capability-matcher",
     "ws": "^8.18.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
