Package lock updates

--- a/sdk/typescript-sdk/agent/package.json
+++ b/sdk/typescript-sdk/agent/package.json
@@ -21,8 +21,10 @@
     "@mew-protocol/client": "file:../client",
     "@mew-protocol/participant": "file:../participant",
     "@mew-protocol/types": "file:../types",
+    "@types/uuid": "^10.0.0",
     "js-yaml": "^4.1.0",
-    "openai": "^5.20.1"
+    "openai": "^5.20.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
