--- a/demos/coder-agent/space.yaml
+++ b/demos/coder-agent/space.yaml
@@ -96,6 +96,8 @@ participants:
       # OPENAI_API_KEY is inherited from environment automatically
       OPENAI_MODEL: "gpt-5"
       # OPENAI_BASE_URL: "..."
+      # Configure the agent with 100 max iterations for complex multi-step tasks
+      MEW_AGENT_CONFIG: '{"maxIterations": 100}'
   
   # MCP Bridge for file system access - executes approved proposals
   mcp-fs-bridge:
