feat: Publish npm packages and refactor coder-agent template
- Published all SDK packages to npm under @mew-protocol org:
  - @mew-protocol/types@0.2.0
  - @mew-protocol/capability-matcher@0.2.0
  - @mew-protocol/client@0.2.0
  - @mew-protocol/participant@0.1.0
  - @mew-protocol/gateway@0.2.0
  - @mew-protocol/agent@0.3.0
  - @mew-protocol/bridge@0.1.1

- Updated all packages to use published npm dependencies instead of local file references
- Fixed repository URLs from mcpx-protocol to mew-protocol
- Added repository, homepage, and bugs fields to all packages

- Refactored coder-agent template to use published packages:
  - Uses npx to run @mew-protocol/agent and @mew-protocol/bridge
  - Removed local agent scripts (now using npm packages)
  - Added MCP filesystem server integration
  - Updated README with comprehensive documentation
  - Clean package.json with all required dependencies

- Fixed bridge import issue (was using relative path, now uses package name)
- Added publish-all.sh script for easier package publishing

The coder-agent template now provides a fully functional AI coding assistant
with file system access through MCP tools, using only published npm packages.

--- a/cli/templates/coder-agent/package.json
+++ b/cli/templates/coder-agent/package.json
@@ -2,8 +2,16 @@
   "name": "mew-coder-agent-space",
   "version": "1.0.0",
   "private": true,
-  "description": "Dependencies for MEW coder-agent space",
+  "description": "MEW Protocol coder agent workspace with MCP filesystem tools",
   "dependencies": {
+    "@mew-protocol/agent": "^0.3.0",
+    "@mew-protocol/bridge": "^0.1.1",
+    "@mew-protocol/client": "^0.2.0",
+    "@mew-protocol/participant": "^0.1.0",
+    "@mew-protocol/types": "^0.2.0",
+    "@modelcontextprotocol/server-filesystem": "^0.6.2",
+    "openai": "^5.20.1",
+    "js-yaml": "^4.1.0",
     "ws": "^8.14.0"
   },
   "engines": {
