--- a/bridge/package.json
+++ b/bridge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mew-protocol/bridge",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "MCP–MEW Protocol Bridge",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,8 +20,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mew-protocol/participant": "file:../sdk/typescript-sdk/participant",
-    "@mew-protocol/types": "file:../sdk/typescript-sdk/types",
+    "@mew-protocol/participant": "^0.1.0",
+    "@mew-protocol/types": "^0.2.0",
     "commander": "^11.1.0",
     "debug": "^4.3.4",
     "ws": "^8.16.0"
@@ -46,6 +46,20 @@
     "bridge",
     "protocol"
   ],
-  "author": "",
-  "license": "MIT"
+  "author": "MEW Working Group",
+  "license": "MIT",
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rjcorwin/mew-protocol.git",
+    "directory": "bridge"
+  },
+  "homepage": "https://github.com/rjcorwin/mew-protocol#readme",
+  "bugs": {
+    "url": "https://github.com/rjcorwin/mew-protocol/issues"
+  }
 }
