--- a/sdk/typescript-sdk/client/package.json
+++ b/sdk/typescript-sdk/client/package.json
@@ -37,7 +37,7 @@
   "author": "MEW Working Group",
   "license": "MIT",
   "dependencies": {
-    "@mew-protocol/types": "file:../types",
+    "@mew-protocol/types": "^0.2.0",
     "eventemitter3": "^5.0.1",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
@@ -64,12 +64,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rjcorwin/mcpx-protocol.git",
+    "url": "https://github.com/rjcorwin/mew-protocol.git",
     "directory": "sdk/typescript-sdk/client"
   },
-  "homepage": "https://github.com/rjcorwin/mcpx-protocol#readme",
+  "homepage": "https://github.com/rjcorwin/mew-protocol#readme",
   "bugs": {
-    "url": "https://github.com/rjcorwin/mcpx-protocol/issues"
+    "url": "https://github.com/rjcorwin/mew-protocol/issues"
   },
   "engines": {
     "node": ">=18.0.0"
