feat(agent): MEWAgent v0.3.2 - improved tool discovery and error handling
- Make OPENAI_API_KEY mandatory with loud failure message
- Remove pattern matching fallback (130+ lines simplified)
- Add tool discovery announcements with clear status indicators
- Warn when reasoning without available tools
- Update CLI templates to use --yes flag for npx commands
- Bump @mew-protocol/agent to v0.3.2

--- a/cli/templates/coder-agent/space.yaml
+++ b/cli/templates/coder-agent/space.yaml
@@ -17,7 +17,7 @@ participants:
   coder-agent:
     type: local
     command: "npx"
-    args: ["@mew-protocol/agent", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "coder-token", "--id", "coder-agent"]
+    args: ["--yes", "@mew-protocol/agent", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "coder-token", "--id", "coder-agent"]
     auto_start: true
     tokens:
       - coder-token
@@ -101,7 +101,7 @@ participants:
   mcp-fs-bridge:
     type: local
     command: "npx"
-    args: ["@mew-protocol/bridge", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "mcp-bridge-token", "--participant-id", "mcp-fs-bridge", "--mcp-command", "npx", "--mcp-args", "@modelcontextprotocol/server-filesystem,./", "--mcp-cwd", "./"]
+    args: ["--yes", "@mew-protocol/bridge", "--gateway", "ws://localhost:${PORT}", "--space", "{{SPACE_NAME}}", "--token", "mcp-bridge-token", "--participant-id", "mcp-fs-bridge", "--mcp-command", "npx", "--mcp-args", "@modelcontextprotocol/server-filesystem,./", "--mcp-cwd", "./"]
     auto_start: true
     tokens:
       - mcp-bridge-token
