--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mew-protocol/cli",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "MEW Protocol CLI - Minimal implementation for testing",
   "bin": {
     "mew": "./bin/mew.js"
@@ -41,6 +41,7 @@
   "files": [
     "src",
     "bin",
+    "templates",
     "README.md"
   ],
   "repository": {
