--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,28 +9,37 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [18.x, 20.x]
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build packages
-      run: npm run build
-    
-    - name: Run tests
+
+    - name: Make scripts executable
+      run: |
+        chmod +x ./tests/run-all-tests.sh
+        chmod +x ./update-deps.sh
+
+    - name: Install dependencies and build packages
+      run: ./update-deps.sh
+
+    - name: Run tests (without LLM scenarios)
       run: npm test
-    
-    - name: Run linter
-      run: npm run lint --workspaces --if-present
+      env:
+        # Scenarios 8, 9, 10 require OPENAI_API_KEY and are skipped with --no-llm flag
+        CI: true
+
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results-node-${{ matrix.node-version }}
+        path: test-results.log
